k8s/applications/tcg-toolkit/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: streamlit
spec:
  selector:
    app: streamlit-app
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30080
