k8s/applications/tcg-toolkit/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort  # or LoadBalancer on cloud
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      nodePort: 30080
    - name: websecure
      port: 443
      nodePort: 30443
